--- a/home-page-2016.html
+++ b/home-page-2016.html
@@ -25,13 +25,13 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
     <div class="content-wrapper">
         <h2>Study with us</h2>
         <div class="promos">
-            <div class="double promotion card" style="background-image: url(/img/double-promo.jpg);">
+            <div class="double promotion card" style="background-image: url(/img/double-promo-2.jpg);">
                 <a href="">
-                    <div class="card-main">
-                        <h3>Open day</h3>
-                        <p>Sunday 21August 2016</p>
+                    <div class="card-main left-align">
+                        <h3>Great teachers aren’t born. They’re taught.</h3>
+                        <p>Master of Teaching applications are open</p>
                     </div>
-                    <p class="cta">Register now</p>
+                    <p class="cta">Find out more</p>
                 </a>
             </div>
             <div class="promotion card">
@@ -304,62 +304,65 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
         </div>
     </div>
 </section>
-
+<section>
 <div class="content-wrapper">
-    <p><a href="#">More</a></p>
     <div class="home-in-page-nav">
-        <div class="col-3max">
-            <div class="">
-                <h3><a href="http://education.unimelb.edu.au/about_us">About Us</a></h3>
+        <h2 class="accordion-label"><a href="#">More</a></h2>
+        <div class="accordion-content">
+            <div class="col-3max">
+                <div class="">
+                    <h3><a href="http://education.unimelb.edu.au/about_us">About Us</a></h3>
+                        <ul>
+                            <li><a href="http://education.unimelb.edu.au/about_us/deans_welcome">Message from the Dean</a></li>
+                            <li><a href="http://education.unimelb.edu.au/about_us/staff">Staff</a></li>
+                            <li><a href="http://education.unimelb.edu.au/about_us/clinical_teaching">Clinical Teaching Explained</a></li>
+                        </ul>
+                </div>
+                <div class="">
+                    <h3><a href="http://education.unimelb.edu.au/research">Research</a></h3>
+                        <ul>
+                            <li><a href="http://education.unimelb.edu.au/news_and_activities/projects">Research Projects</a></li>
+                            <li><a href="http://education.unimelb.edu.au/research/research_centres">Research Centres</a></li>
+                            <li><a href="http://education.unimelb.edu.au/research/research_degrees">Graduate Research</a></li>
+                        </ul>
+                </div>
+                <div class="">
+                    <h3><a href="http://education.unimelb.edu.au/study_with_us">Study With Us</a></h3>
+                        <ul>
+                            <li><a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher">Become a Teacher</a></li>
+                            <li><a href="http://education.unimelb.edu.au/study_with_us/professional_development">Courses for Education Professionals</a></li>
+                            <li><a href="http://education.unimelb.edu.au/research/research_degrees">Research Degrees</a></li>
+                            <li><a href="http://education.unimelb.edu.au/study_with_us/breadth">Breadth</a></li>
+                        </ul>
+                </div>
+                <div class="">
+                    <h3><a href="http://education.unimelb.edu.au/community">Our Community</a></h3>
                     <ul>
-                        <li><a href="http://education.unimelb.edu.au/about_us/deans_welcome">Message from the Dean</a></li>
-                        <li><a href="http://education.unimelb.edu.au/about_us/staff">Staff</a></li>
-                        <li><a href="http://education.unimelb.edu.au/about_us/clinical_teaching">Clinical Teaching Explained</a></li>
+                        <li><a href="http://education.unimelb.edu.au/community/support_us">Support Us</a></li>
+                        <li><a href="http://education.unimelb.edu.au/community/mteach_partnership_schools">Master of Teaching Partnerships</a></li>
+                        <li><a href="http://education.unimelb.edu.au/community/internship_schools">Master of Teaching Internship Schools</a></li>
+                        <li><a href="http://education.unimelb.edu.au/community/kwong_lee_dow_centre">Kwong Lee Dow <br>Multimedia Centre</a></li>
+                        <li><a href="http://education.unimelb.edu.au/community/university_of_melbourne_network_of_schools">University of Melbourne Network of Schools</a></li>
                     </ul>
-            </div>
-            <div class="">
-                <h3><a href="http://education.unimelb.edu.au/research">Research</a></h3>
+                </div>
+                <div class="">
+                    <h3><a href="http://education.unimelb.edu.au/contact_us">Contact Us</a></h3>
                     <ul>
-                        <li><a href="http://education.unimelb.edu.au/news_and_activities/projects">Research Projects</a></li>
-                        <li><a href="http://education.unimelb.edu.au/research/research_centres">Research Centres</a></li>
-                        <li><a href="http://education.unimelb.edu.au/research/research_degrees">Graduate Research</a></li>
+                        <li><a href="http://education.unimelb.edu.au/contact_us">Student Enquiries</a></li>
+                        <li><a href="http://education.unimelb.edu.au/contact_us">Find an Expert</a></li>
                     </ul>
-            </div>
-            <div class="">
-                <h3><a href="http://education.unimelb.edu.au/study_with_us">Study With Us</a></h3>
+                </div>
+                <div class="">
+                    <h3><a href="http://education.unimelb.edu.au/news_and_activities">News and Activities</a></h3>
                     <ul>
-                        <li><a href="http://education.unimelb.edu.au/study_with_us/become_a_teacher">Become a Teacher</a></li>
-                        <li><a href="http://education.unimelb.edu.au/study_with_us/professional_development">Courses for Education Professionals</a></li>
-                        <li><a href="http://education.unimelb.edu.au/research/research_degrees">Research Degrees</a></li>
-                        <li><a href="http://education.unimelb.edu.au/study_with_us/breadth">Breadth</a></li>
+                        <li><a href="http://education.unimelb.edu.au/news_and_activities/events">Events</a></li>
+                        <li><a href="http://education.unimelb.edu.au/news_and_activities/news">News</a></li>
+                        <li><a href="http://education.unimelb.edu.au/news_and_activities/projects">Projects</a></li>
+                        <li><a href="http://education.unimelb.edu.au/news_and_activities/deans_lecture_series">Dean’s Lecture Series</a></li>
                     </ul>
-            </div>
-            <div class="">
-                <h3><a href="http://education.unimelb.edu.au/community">Our Community</a></h3>
-                <ul>
-                    <li><a href="http://education.unimelb.edu.au/community/support_us">Support Us</a></li>
-                    <li><a href="http://education.unimelb.edu.au/community/mteach_partnership_schools">Master of Teaching Partnerships</a></li>
-                    <li><a href="http://education.unimelb.edu.au/community/internship_schools">Master of Teaching Internship Schools</a></li>
-                    <li><a href="http://education.unimelb.edu.au/community/kwong_lee_dow_centre">Kwong Lee Dow <br>Multimedia Centre</a></li>
-                    <li><a href="http://education.unimelb.edu.au/community/university_of_melbourne_network_of_schools">University of Melbourne Network of Schools</a></li>
-                </ul>
-            </div>
-            <div class="">
-                <h3><a href="http://education.unimelb.edu.au/contact_us">Contact Us</a></h3>
-                <ul>
-                    <li><a href="http://education.unimelb.edu.au/contact_us">Student Enquiries</a></li>
-                    <li><a href="http://education.unimelb.edu.au/contact_us">Find an Expert</a></li>
-                </ul>
-            </div>
-            <div class="">
-                <h3><a href="http://education.unimelb.edu.au/news_and_activities">News and Activities</a></h3>
-                <ul>
-                    <li><a href="http://education.unimelb.edu.au/news_and_activities/events">Events</a></li>
-                    <li><a href="http://education.unimelb.edu.au/news_and_activities/news">News</a></li>
-                    <li><a href="http://education.unimelb.edu.au/news_and_activities/projects">Projects</a></li>
-                    <li><a href="http://education.unimelb.edu.au/news_and_activities/deans_lecture_series">Dean’s Lecture Series</a></li>
-                </ul>
+                </div>
             </div>
         </div>
     </div>
 </div>
+</section>
