--- a/home-page-2016.html
+++ b/home-page-2016.html
@@ -257,10 +257,15 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 </a>
             </div>
         </div>
-        <div class="controls">
-            <span class="left">&larr;</span>
-            <span class="page">* * *</span>
-            <span class="right">&rarr;</span>
+        <div class="slider-controls">
+            <button class="prev">&larr; Previous 4</button>
+            <ul class="pager">
+                <li class="current">1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+            </ul>
+            <button class="next">Next 4 &rarr;</button>
         </div>
     </div>
 </section>
