--- a/home-page-2016.html
+++ b/home-page-2016.html
@@ -273,14 +273,15 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
     <div class="content-wrapper">
         <h2>Get involved</h2>
         <div class="promos">
-            <div class="double promotion card" style="background-image: url(/img/double-promo.jpg);">
-                <a href="">
-                    <div class="card-main left-align">
-                        <h3>Join our network of schools</h3>
-                        <p>Breakfast information session, Tuesday 30 August 2016</p>
-                    </div>
-                    <p class="cta">Register now</p>
-                </a>
+            <div class="double promotion flat">
+                <h3>Our network of schools</h3>
+                <div class="text">
+                    <p class="copy">Breakfast information session, Tuesday 30 August 2016</p>
+                    <p><a href="">Register now</a></p>
+                </div>
+                <figure>
+                    <img src="/img/school-network.svg" alt="">
+                </figure>
             </div>
             <div class="promotion card">
                 <a href="">
