--- a/home-page-2016.html
+++ b/home-page-2016.html
@@ -14,6 +14,60 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
                 <cite>Malala Yousafzai</cite>
             </footer>
         </blockquote>
+        <blockquote>
+            <p>“Education is not preparation for life; education is life itself.”</p>
+            <footer>
+                <cite>John Dewey</cite>
+            </footer>
+        </blockquote>
+        <blockquote>
+            <p>“I touch the future &mdash; I teach.”</p>
+            <footer>
+                <cite>Christa McAuliffe</cite>
+            </footer>
+        </blockquote>
+        <blockquote>
+            <p>“By learning, you will teach. By teaching, you will learn.”</p>
+            <footer>
+                <cite>Latern proverb</cite>
+            </footer>
+        </blockquote>
+        <blockquote>
+            <p>“The highest result of education is tolerance.”</p>
+            <footer>
+                <cite>Helen Keller</cite>
+            </footer>
+        </blockquote>
+        <blockquote>
+            <p>“Whilst academic education is important, it is even more important that the membership of everyone is valued.”</p>
+            <footer>
+                <cite>Shanaka Fernando</cite>
+            </footer>
+        </blockquote>
+        <blockquote>
+            <p>“It is the supreme art of the teacher to awaken joy in creative expression and knowledge.”</p>
+            <footer>
+                <cite>Albert Einstein</cite>
+            </footer>
+        </blockquote>
+        <blockquote>
+            <p>“A teach affects eternity; he can never tell where his influence stops.”</p>
+            <footer>
+                <cite>Henry Adams</cite>
+            </footer>
+        </blockquote>
+        <blockquote>
+            <p>“Tell me and I forget. Teach me and I remember. Involve me and I learn.”</p>
+            <footer>
+                <cite>Benjamin Franklin</cite>
+            </footer>
+        </blockquote>
+        <blockquote>
+            <p>“It is the mark of an educated mind to be able to entertain a thought without accepting it.”</p>
+            <footer>
+                <cite>Aristotle</cite>
+            </footer>
+        </blockquote>
     </div>
 </div>
 <div class="positioning">
