new promo example

--- a/home-page-2016.html
+++ b/home-page-2016.html
@@ -130,13 +130,13 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
             <div class="promotion card">
                 <a href="">
                     <header>
-                        <img src="/img/promo.jpg" alt="">
+                        <img src="/img/promo-2.jpg" alt="">
                     </header>
                     <div class="card-main">
-                        <h3>Start your teaching career three years before you graduate</h3>
-                        <p>Master of Teaching (Secondary) Internship</p>
+                        <h3>While you’re learning you’ll teach. While you’re teaching, you’ll learn.</h3>
+                        <p>Attend a Master of Teaching information session</p>
                     </div>
-                    <p class="cta">Apply now</p>
+                    <p class="cta">Register now</p>
                 </a>
             </div>
             <div class="testimonial promotion card">
