card header overflow

--- a/news-and-activities/projects.html
+++ b/news-and-activities/projects.html
@@ -14,7 +14,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>1 Teaching Australia</h3>
+                <h3>Teaching Australia</h3>
                 <p>The Teaching Australia project seeks to support the teaching of Australian texts in primary and secondary schools. The project is designed to enhance Australian teachers’ knowledge of, and readiness to teach, Australian literature in the twenty-first century global context.</p>
             </div>
             <footer>
@@ -29,7 +29,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>2 Investigating literary knowledge in the making of English teachers</h3>
+                <h3>Investigating literary knowledge in the making of English teachers</h3>
                 <p>This project explores the literary education of Early Career English Teachers in order to understand the role that literary knowledge plays in their teaching.</p>
             </div>
             <footer>
@@ -44,7 +44,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0010/1768420/secondary-and-uni-maths.png" alt="Secondary and university mathematics logo"> 
             </header>
             <div class="card-main">
-                <h3>3 Secondary and university mathematics: Do they speak the same language?</h3>
+                <h3>Secondary and university mathematics: Do they speak the same language?</h3>
                 <p>This project will examine symbol use, a key aspect of students’ mathematical experience at school and university, and measure its impact on progression rates.</p>
             </div>
             <footer>
@@ -59,7 +59,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>4 Realising the potential of Australia’s high capacity students</h3>
+                <h3>Realising the potential of Australia’s high capacity students</h3>
                 <p>This project, known as REAP, involves exploration of the trend of students in the upper quartile of student achievement not showing learning gains at the same rate as their peers.</p>
             </div>
             <footer>
@@ -74,7 +74,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>5 Assessment and Teaching of Foundational Skills for Diverse Learners: The Students with Additional Needs Program</h3>
+                <h3>Assessment and Teaching of Foundational Skills for Diverse Learners: The Students with Additional Needs Program</h3>
                 <p>This program of research commenced in 2007 at the Assessment Research Centre under the leadership of Professor Patrick Griffin, and since then has drawn on the collaborative work of many educators, researchers, and administrators who share a commitment to supporting every student's right to learn.</p>
             </div>
             <footer>
@@ -89,7 +89,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>6 International Baccalaureate Programs: Longer Term Outcomes</h3>
+                <h3>International Baccalaureate Programs: Longer Term Outcomes</h3>
                 <p>A qualitative study investigating the influence of International Baccalaureate programs on the lives of alumni.</p>
             </div>
             <footer>
@@ -104,7 +104,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>7 Peace building and language</h3>
+                <h3>Peace building and language</h3>
                 <p>Professor Joseph Lo Bianco has been appointed by UNICEF under its Peace Building and Education international project to conduct a research and intervention project on language, social cohesion and peace building in three SE Asian countries.</p>
             </div>
             <footer>
@@ -119,7 +119,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>8 Evaluation of the Australian Professional Standards for Teachers</h3>
+                <h3>Evaluation of the Australian Professional Standards for Teachers</h3>
                 <p>The Australian Institute of Teaching and School Leadership (AITSL) has engaged the University of Melbourne and our partner, the Australian College of Educators, to design, develop and deliver the process and impact evaluation of the Australian Professional Standards for Teachers.</p>
             </div>
             <footer>
@@ -134,7 +134,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0005/1768415/arts-ed.jpg" alt="">
             </header>
             <div class="card-main">
-                <h3>9 Arts Education</h3>
+                <h3>Arts Education</h3>
                 <p>Teachers’ application of arts rich practice: teaching in and through the arts</p>
             </div>
             <footer>
@@ -149,7 +149,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0007/1768417/focusing-on-learner.jpg" alt="">
             </header>
             <div class="card-main">
-                <h3>10 Focusing on the learner: Charting a way forward for Australian education</h3>
+                <h3>Focusing on the learner: Charting a way forward for Australian education</h3>
                 <p>Australia’s current education policies will not address its slipping international rankings, according to a paper from the University of Melbourne’s Graduate School of Education.</p>
             </div>
             <footer>
@@ -164,7 +164,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0003/1768422/TAP-logo.png" alt="">
             </header>
             <div class="card-main">
-                <h3>11 Teacher Artmaker Project</h3>
+                <h3>Teacher Artmaker Project</h3>
                 <p>TAP is an international first for Visual Art Education, providing for the first time, longitudinal data on teacher’s participation in art production, perceptions of quality of teaching, and expectations of retention in the profession.</p>
             </div>
             <footer>
@@ -179,7 +179,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0011/1768421/SMART-logo.png" alt="">
             </header>
             <div class="card-main">
-                <h3>12 Specific Mathematics Assessments that Reveal Thinking</h3>
+                <h3>Specific Mathematics Assessments that Reveal Thinking</h3>
                 <p>A 'smart-test' is an assessment that reveals thinking about a specific topic in mathematics.</p>
             </div>
             <footer>
@@ -194,7 +194,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0009/1768419/NAPLAN.jpg" alt="">
             </header>
             <div class="card-main">
-                <h3>13 NAPLAN</h3>
+                <h3>NAPLAN</h3>
                 <p>Launched on 26 November 2012, <cite>The Experience of Education: The impacts of high stakes testing on school students and their families: An Educator’s Perspective</cite> is a major study into the impact of NAPLAN testing.</p>
             </div>
             <footer>
@@ -209,7 +209,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>14 Women in the Scientific Research Workforce</h3>
+                <h3>Women in the Scientific Research Workforce</h3>
                 <p>This project, anchored in the strategically important fields of biomedical research and chemistry related industries, will use longitudinal data analysis and industry case studies to extend knowledge of gender differences in scientific career paths and critical career transitions.</p>
             </div>
             <footer>
@@ -224,7 +224,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0008/1269116/actrc_project_img.jpg" alt="">
             </header>
             <div class="card-main">
-                <h3>15 Assessment, Curriculum and Technology Research Centre (ACTRC)</h3>
+                <h3>Assessment, Curriculum and Technology Research Centre (ACTRC)</h3>
                 <p>The Philippines is facing a rapidly changing education system, associated changes in assessment and curriculum systems at national, regional and local levels, and a need for empirical data on curriculum innovation and implementation.</p>
             </div>
             <footer>
@@ -239,7 +239,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0003/1768413/abels-logo.png" alt="">
             </header>
             <div class="card-main">
-                <h3>16 Abilities Based Learning and Education Support (ABLES) Research</h3>
+                <h3>Abilities Based Learning and Education Support (ABLES) Research</h3>
                 <p>The aim of the Abilities Based Learning and Education Support (ABLES) research is to inform the development of an integrated program of assessment, reporting, and teaching advice for children and young people whose learning is supported by the Victorian Department of Education and Early Childhood Development’s (DEECD) Program for Students with Disabilities.</p>
             </div>
             <footer>
@@ -254,7 +254,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0020/623063/kbpteam-photo.jpg" alt="">
             </header>
             <div class="card-main">
-                <h3>17 Knowledge Building Project</h3>
+                <h3>Knowledge Building Project</h3>
                 <p>This project aims to shed new light on Australian strategies of knowledge-building and on agendas for future policies and practice.</p>
             </div>
             <footer>
@@ -269,7 +269,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>18 Teachers’ professional statistical literacy</h3>
+                <h3>Teachers’ professional statistical literacy</h3>
                 <p>This project is examining principals’ and teachers’ attitudes to, and perceptions of, statistical reports as well as their skills in interpreting such quantitative information.</p>
             </div>
             <footer>
@@ -284,7 +284,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>19 Exploring teacher professional learning in a virtual environment</h3>
+                <h3>Exploring teacher professional learning in a virtual environment</h3>
                 <p>This project will establish a virtual classroom where participants can observe and explore teacher and student thinking.</p>
             </div>
             <footer>
@@ -299,7 +299,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>20 Learning Mathematics with Technology</h3>
+                <h3>Learning Mathematics with Technology</h3>
                 <p>In multi-facetted projects, we are investigating the new opportunities to improve the teaching and learning of difficult topics, particularly algebra, through changed curriculum, assessment and teaching.</p>
             </div>
             <footer>
@@ -314,7 +314,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
 
             </header>
             <div class="card-main">
-                <h3>21 Researching ArtPlay and Signal</h3>
+                <h3>Researching ArtPlay and Signal</h3>
                 <p>ArtPlay (2004) and Signal (2009) are unique community arts spaces managed by the City of Melbourne (CoM). They cater for children and youth aged from three to their early twenties. The primary foci of this research is participant engagement.</p>
             </div>
             <footer>
@@ -329,7 +329,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0004/1768423/teacher-classroom.jpg" alt="">
             </header>
             <div class="card-main">
-                <h3>22 Educating the Australian Adolescent</h3>
+                <h3>Educating the Australian Adolescent</h3>
                 <p>An historical study of Australian secondary education in the middle decades of the twentieth century.</p>
             </div>
             <footer>
@@ -344,7 +344,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/new
                 <img src="http://education.unimelb.edu.au/__data/assets/image/0006/1768416/e4kids.png" alt="">
             </header>
             <div class="card-main">
-                <h3>23 E4Kids</h3>
+                <h3>E4Kids</h3>
                 <p>E4Kids is a 5-year study that will follow a large group of three and four year olds as they participate in childcare, kindergarten and preschool programs.</p>
             </div>
             <footer>
