style guide update

--- a/style-guide/style-guide-layout.html
+++ b/style-guide/style-guide-layout.html
@@ -3,21 +3,26 @@
 
 layout: style-guide
 title: Web style guide
-sub-title: Layout
+sub-title: Layouts
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/queenberry_floor_landingLive.jpg
 ---
 
-<h2 class="style-guide">Layout</h2>
+<h2 class="style-guide">Layouts</h2>
 
-<h3 class="style-guide">Style A</h3>
-<p>Style A layout has a 5/8ths column for the main content and a 3/8ths column for side bar content. These two columns become half-half for portrait tablet viewport (&lt; 801px) and stacked for mobile (&lt; 641 px).</p>
+<h3 class="style-guide">Standard content page layout</h3>
+<p>Our standard page layout has two columns:</p>
+<ul>
+    <li>a main column (on the left, 5/8ths width)</li>
+    <li>a side-bar (on the right, 3/8ths width).</li>
+</ul>
+<p>When viewed on a tablet the two columns become half-and-half. When viewed on a mobile both columns take up 100% of the screen width, with the main column stacked on top of the side-bar.</p>
 
-<div class="article">
+<article>
     <div style="background: #FDEEF4; height: 200px;">
         <p>This is where the main page content goes.</p>
     </div>
-</div>
+</article>
 <div class="side-bar">
     <div style="background: #FDEEF4; height: 200px;">
         <p>This is where additional or summative information goes.</p>
@@ -25,6 +30,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
     </div>
 </div>
 
+<script src="https://gist.github.com/iPadisthin/4d8656fd8f10334982f9612a559ee577.js"></script>
 <div>
     <pre>
         <h4>Code</h4>
