--- a/news-and-activities/event-page.html
+++ b/news-and-activities/event-page.html
@@ -2,7 +2,7 @@
 #jekyll front matter
 
 layout: events
-title: Event page
+title: Breaking bad - Regulating the responses of teachers to students' "behaviours of concern"
 bodyClass:
 heroImage:  http://education.unimelb.edu.au/__data/assets/image/0005/1862015/news-hero-image.jpg
 ---
