--- a/style-guide/style-guide-components.html
+++ b/style-guide/style-guide-components.html
@@ -657,7 +657,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
             <img src="http://placehold.it/150x150" alt="">
         </figure>
         <div class="details">
-            <h4><a href="//www.findanexpert.unimelb.edu.au/display/person194117">Sally Beadle</a></h4>
+            <p class="profile-name"><a href="//www.findanexpert.unimelb.edu.au/display/person194117">Sally Beadle</a></p>
             <p class="info"><span class="tel">9035 7810</span> <a class="email" href="mailto:beadles@unimelb.edu.au">Sally Beadle</a> <a class="twitter" href="https://twitter.com/">@Beadle</a></p>
             <p>Sally rejoined the Centre in February 2013 to work on a range of research and consultancy projects in the area of adolescent health and wellbeing.</p>
         </div>
@@ -668,7 +668,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
             <img src="http://placehold.it/150x150" alt="">
         </figure>
         <div class="details">
-            <h4><a href="//www.findanexpert.unimelb.edu.au/display/person194117">Sally Beadle</a></h4>
+            <p class="profile-name"><a href="//www.findanexpert.unimelb.edu.au/display/person194117">Sally Beadle</a><p class="profile-name">
             <p class="info"><span class="tel">9035 7810</span> <a class="email" href="mailto:beadles@unimelb.edu.au">Sally Beadle</a> <a class="twitter" href="https://twitter.com/">@Beadle</a></p>
             <div class="collapse">
                 <p>Sally rejoined the Centre in February 2013 to work on a range of research and consultancy projects in the area of adolescent health and wellbeing.</p>
@@ -690,7 +690,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
         &lt;img src=&quot;http://placehold.it/150x150&quot; alt=&quot;&quot;&gt;
     &lt;/figure&gt;
     &lt;div class=&quot;details&quot;&gt;
-        &lt;h4&gt;&lt;a href=&quot;//www.findanexpert.unimelb.edu.au/display/person194117&quot;&gt;Sally Beadle&lt;/a&gt;&lt;/h4&gt;
+        &lt;p class=&quot;profile-name&quot;&gt;&lt;a href=&quot;//www.findanexpert.unimelb.edu.au/display/person194117&quot;&gt;Sally Beadle&lt;/a&gt;&lt;/p&gt;
         &lt;p class=&quot;info&quot;&gt;&lt;span class=&quot;tel&quot;&gt;9035 7810&lt;/span&gt; &lt;a class=&quot;email&quot; href=&quot;mailto:beadles@unimelb.edu.au&quot;&gt;Sally Beadle&lt;/a&gt; &lt;a class=&quot;twitter&quot; href=&quot;https://twitter.com/&quot;&gt;@Beadle&lt;/a&gt;&lt;/p&gt;
         &lt;p&gt;Sally rejoined the Centre in February 2013 to work on a range of research and consultancy projects in the area of adolescent health and wellbeing.&lt;/p&gt;
     &lt;/div&gt;
@@ -701,7 +701,7 @@ heroImage:  http://education.unimelb.edu.au/__data/assets/image/0007/1244833/que
         &lt;img src=&quot;http://placehold.it/150x150&quot; alt=&quot;&quot;&gt;
     &lt;/figure&gt;
     &lt;div class=&quot;details&quot;&gt;
-        &lt;h4&gt;&lt;a href=&quot;//www.findanexpert.unimelb.edu.au/display/person194117&quot;&gt;Sally Beadle&lt;/a&gt;&lt;/h4&gt;
+         &lt;p class=&quot;profile-name&quot;&gt;&lt;a href=&quot;//www.findanexpert.unimelb.edu.au/display/person194117&quot;&gt;Sally Beadle&lt;/a&gt;&lt;/p&gt;
         &lt;p class=&quot;info&quot;&gt;&lt;span class=&quot;tel&quot;&gt;9035 7810&lt;/span&gt; &lt;a class=&quot;email&quot; href=&quot;mailto:beadles@unimelb.edu.au&quot;&gt;Sally Beadle&lt;/a&gt; &lt;a class=&quot;twitter&quot; href=&quot;https://twitter.com/&quot;&gt;@Beadle&lt;/a&gt;&lt;/p&gt;
         &lt;div class=&quot;collapse&quot;&gt;
             &lt;p&gt;Sally rejoined the Centre in February 2013 to work on a range of research and consultancy projects in the area of adolescent health and wellbeing.&lt;/p&gt;
